--- a/lib/crds_form_builder_web/templates/form/index.html.eex
+++ b/lib/crds_form_builder_web/templates/form/index.html.eex
@@ -4,25 +4,9 @@
   <div id="custom-form" class="col-md-12"> </div>
 </div>
 
-    <script>
-
-    var f = Formio.createForm(document.getElementById("form-one"), `https://mmpdfuvrztkytaa.form.io/<%= @form_path %>`);
-
-      console.log(f);
-  <%#var str = <%= raw @strForm <]%>
-  <%#var f = Formio.createForm(document.getElementById('custom-form'), str);%>
-  <%#console.log(f);%>
-    f.then(function(form) {
-      // Log the form schema.
-      console.log(form);
-      formio.saveSubmission({data: {
-        firstName: 'Joe',
-        lastName: 'Smith',
-        email: 'joe@example.com'
-    }}).then(function(submission) {
-      console.log(submission);
-    }).catch(function(e) {
-     console.log(e); 
-    });
-  });
+<script>
+    var form = new FormioForm(document.getElementById('custom-form'));
+    form.form = <%= raw @str_form %>;
+    form.src = `https://crossroads.form.io/<%= @form_path %>`;
+    form.submission = <%= raw @submission_data %>
 </script>
